# soarm-teleop

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh
src/soarm_sim/: __init__.py
src/soarm_sim/datasets/: __init__.py
src/soarm_sim/datasets/generators/: __init__.py  scripted_expert.py
src/soarm_sim/datasets/recorders/: __init__.py  episode_recorder.py
src/soarm_sim/eval/: __init__.py
src/soarm_sim/robots/: __init__.py
src/soarm_sim/robots/so_arm101/: __init__.py  so_arm101_cfg.py
src/soarm_sim/robots/so_arm101/urdf/: __init__.py
src/soarm_sim/scripts/: collect_demos.py  teleop.py
src/soarm_sim/tasks/: __init__.py
src/soarm_sim/tasks/pick_place/: __init__.py  pick_place_env_cfg.py
src/soarm_sim/tasks/teleop/: __init__.py  teleop_env_cfg.py
