[project]
name = "soarm-sim"
version = "0.1.0"
description = "SO-ARM101 teleoperation in Isaac Sim via Isaac Lab"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "isaaclab[all]==2.3.0",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "numpy==1.26.4",
]

[project.scripts]
teleop = "soarm_sim.scripts.teleop:main"
collect-demos = "soarm_sim.scripts.collect_demos:main"

[tool.uv]
index-strategy = "unsafe-best-match"
environments = [
  "sys_platform == 'linux' and implementation_name == 'cpython' and python_version == '3.11'",
  "sys_platform == 'win32' and implementation_name == 'cpython' and python_version == '3.11'"
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.extra-build-dependencies]
flatdict = ["setuptools", "wheel"]
soarm-sim = ["uv_build"]

[build-system]
requires = ["uv_build>=0.8.21,<0.9.0"]
build-backend = "uv_build"
